@startuml

skinparam class {
    HeaderBackgroundColor #DAE8FC
	BackgroundColor White
	ArrowColor black
	BorderColor 6C8EBF
	FontSize 15
	headerFontColor 6C8EBF
	style Frame
	FontName Arial Rounded MT Bold

	}
hide circle

skinparam classAttributeIconSize 0

skinparam classAttributeFontSize 13

skinparam shadowing false

skinparam defaultFontName Segoe UI
class EditRoomWebController
class RoomDomainService
class Room

EditRoomWebController "1" -down-> "1" RoomDomainService

RoomDomainService "1" --> "0..*" Room

RoomDomainService "1" --> "0..*" RoomDto


EditRoomWebController : + setNewRoomAttributeName  ( )


RoomDomainService : + getRoomByNameDto( )
RoomDomainService : + editRoom( )

RoomDto : + getRoomByName( )
RoomDto : + getDescription( )
RoomDto : + getHouseFloor( )
RoomDto : + getHeight( )
RoomDto : + getLength( )
RoomDto : + getWidth( )


Room : -  name: String
Room : -  description: String
Room : -  houseFloor: double
Room : -  height: double
Room : -  width: double
Room : -  length: double


@enduml